Wprowadzenie wczytywania nazwy i opisu umiejetnosci z GameBundle.

--- a/resources/GameBundle.properties
+++ b/resources/GameBundle.properties
@@ -1,9 +1,49 @@
 winner = Wygrał {0}\!
-err_regroup = Aby skonczyć turę rozmieść wszystkie jednostki\!
-err_attack = Nie możesz zaatakować tego pola\!
-err_attack2 = Masz za mało jednostek aby podbić to pole\!
-err_token=Nie możesz ustawić tego żetonu na tym polu\!
-err_token2=Nie masz uprawnień do poruszania tym żetonem\!
-err_choose_nation=Nie masz wystarczającej liczby monet\!
-err_no_field_owned=Musisz podbić przynajmniej jedno pole\!
-err_attack3=Nie możesz zaatakować tego pola jako pierwszego\!
+error.regroup = Aby skonczyć turę rozmieść wszystkie jednostki\!
+error.attack.wrong_target = Nie możesz zaatakować tego pola\!
+error.attack.not_enough_units = Masz za mało jednostek aby podbić to pole\!
+error.token.wrong_target=Nie możesz ustawić tego żetonu na tym polu\!
+error.token.no_rights=Nie masz uprawnień do poruszania tym żetonem\!
+error.pick_nation.not_enough_money=Nie masz wystarczającej liczby monet\!
+error.next_turn.no_fields_conquered=Musisz podbić przynajmniej jedno pole\!
+error.attack.first_attack.wrong_target=Nie możesz zaatakować tego pola jako pierwszego\!
+ability.wealth.name=Zamożne
+ability.wealth.desc=Na koniec pierwszej tury obecności Zamożnej rasy na mapie otrzymujesz jednorazowo dodatkowe 7 monet zwycięstwa.
+ability.underground.name=Podziemne
+ability.underground.desc=Możesz podbijać regiony z jaskiniami liczbą żetonów o 1 mniejszą. Nadal potrzebujesz co najmniej 1 żetonu. Wszystkie regiony w twoich granicach na których znajdują się jaskinie są dla celów podboju traktowane jako regiony sąsiadujące ze sobą.
+ability.swampy.name=Bagienne
+ability.swampy.desc=Na koniec każdej tury każdy bagienny region zajmowany przez twoją rasę przynosi ci dodatkowo 1 monetę zwycięstwa.
+ability.steadfast.name=Niezłomne
+ability.steadfast.desc=Możesz przeprowadzić akcję wymierania rasy na koniec swojej normalnej tury, po fazie zdobywania monet zwycięstwa, zamiast poświęcać na to osobną turę.
+ability.spiritualist.name=Uduchowione
+ability.spiritualist.desc=Zdobywasz 2 dodatkowe monety zwycięstwa na koniec każdej tury w której twoja rasa pozostała aktywna.
+ability.sailing.name=Żeglujące
+ability.sailing.desc=Dopóki twoja Żeglująca rasa jest aktywna możesz podbijać Morza i Jeziora traktując je jak puste regiony. Gdy rasa jest wymierająca nadal kontrolujesz re regiony i zdobywasz za nie monety.
+ability.merchant.name=Handlujące
+ability.merchant.desc=Na koniec każdej tury każdy region zajmowany przez twoją rasę przynosi ci dodatkowo 1 monetę zwycięstwa.
+ability.mad.name=Oszalałe
+ability.mad.desc=Możesz użyć kości posiłków przed każdym swoim podbojem. Jak zawsze do podboju wymagany jest co najmniej jeden żeton.
+ability.looting.name=Plądrujące
+ability.looting.desc=Na koniec tury każdy niepusty region, jaki w tej turze podbiła rasa przynosi ci dodatkowo 1 monetę zwycięstwa.
+ability.horseman.name=Konne
+ability.horseman.desc=Możesz podbijać Wzgórza i Pola liczbą żetonów o 1 mniejszą od wymaganej. Nadal potrzebujesz co najmniej jednego żetonu.
+ability.heroic.name=Bohaterskie
+ability.heroic.desc=Na koniec swojej tury umieść obu Bohaterów w dwóch różnych kontrolowanuch przez rasę regionach. Do czasu gdy bohaterowie się w nich znajdują regiony te są nietykalne.
+ability.hilly.name=Wzgórzyste
+ability.hilly.desc=Na koniec tury każdy region Wzgórz zajmowany przez twoją rasę przynosi ci dodatkowo monetę zwycięstwa.
+ability.fortified.name=Warowne
+ability.fortified.desc=Raz na turę umieść 1 Twierdzę w kontrolowanym przez siebie regionie. Na koniec tury Twierdza przynosi 1 dodatkową monetę zwycięstwa. Twierdza dodatkowo zwiększa obronność regionu o 1. Odkłóż Twierdzę gdy opuścisz region lub zostanie on podboity. Maksymalnie może być 1 Twierdza na regionie, a 6 na mapie.
+ability.forestry.name=Leśne
+ability.forestry.desc=Na koniec każdej tury każdy leśny region zajmowany przez twoją rasę przynosi ci dodatkowo 1 monetę zwycięstwa.
+ability.flying.name=Latające
+ability.flying.desc=Możesz podbijać jakiekolwiek regiony mapy za wyjątkiem Mórz i Jezior. Regiony nie muszą w żaden sposób sąsiadować z regionami już podbitymi.
+ability.alchemical.name=Alchemicy
+ability.alchemical.desc=Zdobywasz 2 dodatkowe monety zwycięstwa na koniec każdej tury w której twoja rasa pozostała aktywna.
+ability.brave.name=Waleczne
+ability.brave.desc=Możesz podbijać każdy region liczbą żetonów o 1 mniejszą od wymaganej. Nadal potrzebujesz co najmniej jednego żetonu.
+ability.camper.name=Obozujące
+ability.camper.desc=Podczas fazy przegrupowania rozmieść 5 Obozowisk w dowolny sposób na regionach kontrolowanych przez swoją rasę. Obozowisko działa jak dodatkowy żeton rasy i zwiększa obronność regionu o 1, a także broni przez mocą czarnoksiężników. W każdej turze możesz zmieniać ich rozmieszczenie. Obozowiska znikają dopiero gdy rasa wymiera.
+ability.diplomatic.name=Dyplomatyczne
+ability.diplomatic.desc=Na koniec swojej tury możesz wybrać jednego z graczy, którego aktywnej rasy nie atakowałeś w tej turze i zawrzeć z nim pokój. Ten gracz nie może Cie atakować aż do końca twojej następnej tury.
+ability.dragon_lords.name=Władcy smoków
+ability.dragon_lords.desc=Raz na turę możesz podbić sąsiedni region używając 1 żetonu rasy, bez względu na liczbę broniących. Po podbiciu regionu umieść na nim smoka. Tak długo jak smok pozostaje w regionie, jest on nietykalny.
