Wprowadzenie wczytywania nazwy i opisu ras z GameBundle.

--- a/resources/GameBundle.properties
+++ b/resources/GameBundle.properties
@@ -47,3 +47,31 @@ ability.diplomatic.name=Dyplomatyczne
 ability.diplomatic.desc=Na koniec swojej tury możesz wybrać jednego z graczy, którego aktywnej rasy nie atakowałeś w tej turze i zawrzeć z nim pokój. Ten gracz nie może Cie atakować aż do końca twojej następnej tury.
 ability.dragon_lords.name=Władcy smoków
 ability.dragon_lords.desc=Raz na turę możesz podbić sąsiedni region używając 1 żetonu rasy, bez względu na liczbę broniących. Po podbiciu regionu umieść na nim smoka. Tak długo jak smok pozostaje w regionie, jest on nietykalny.
+nation.wizards.name=Czarodzieje
+nation.wizards.desc=Na koniec tury zdobywasz dodatkowo 1 monetę zwycięstwa za każdy magiczny region, jaki zajmujesz.
+nation.trolls.name=Trolle
+nation.trolls.desc=W każdym podbitym regionie umieść Legowisko, które zwięsksza jego obronność o 1, nawet gdy Trolle staną się rasą Wymierającą.
+nation.tritons.name=Trytony
+nation.tritons.desc=Możesz podbijać regiony nadbrzeżne liczbą żetonów o jeden mniejszą niż wymagana. Nadal potrzebujesz co najmniej jednego żetonu.
+nation.sorcerers.name=Czarnoksiężnicy
+nation.sorcerers.desc=Raz na turę możesz podbić po jednym regionie każdego innego gracza bronionym przez pojedynczy żeton jego Aktywnej rasy używając dodatkowego żetonu Czarnoksiężnika z zasobnika.
+nation.skeletons.name=Szkielety
+nation.skeletons.desc=Podczas Przegrupowania dobierz 1 dodatkowy żeton rasy z zasobnika za każde 2 niepuste regiony, jakie podbiłeś w tej turze.
+nation.ratmen.name=Szczuroludzie
+nation.ratmen.desc=Sama ich liczebność jest wystarczającym atutem.
+nation.orcs.name=Orki
+nation.orcs.desc=Na koniec tury zdobywasz 1 dodatkową monetę zwycięstwa za każdy niepusty region, jaki podbiłeś w tej turze.
+nation.ghuls.name=Ghule
+nation.ghuls.desc=Gdy Ghule stają się rasą Wymierającą, wszystkie pozostają na mapie i nadal mogą dokonywać podbojów wedle standardowych zasad.
+nation.giants.name=Olbrzymy
+nation.giants.desc=Atakujesz regiony sąsiadujące z Górami, które już zajmujesz liczbą żetonów o 1 mniejszą niż wymagana. Nadal potrzebujesz co najmniej jednego żetonu.
+nation.halflings.name=Niziołki
+nation.halflings.desc=Możesz rozpocząć podboje od dowolnego regionu. W pierwszych dwóch zajętych regionach umieść Norki, które czynią je nietykalnymi.
+nation.amazons.name=Amazonki
+nation.amazons.desc=Do podboju możesz użyć dodatkowo 4 żetonów.
+nation.dwarves.name=Krasnoludy
+nation.dwarves.desc=Każdy górniczy region przynosi ci dodatkowo 1 monetę zwycięstwa. Nawet gdy Krasnoludy są rasą Wymierającą.
+nation.elves.name=Elfy
+nation.elves.desc=Zachowujesz wszystkie wycofane oddziały.
+nation.humans.name=Ludzie
+nation.humans.desc=Na koniec tury każdy kontrolowany region Pól przynosi ci dodatkowo 1 monetę zwycięstwa.
