--- a/resources/GameBundle.properties
+++ b/resources/GameBundle.properties
@@ -61,8 +61,8 @@ nation.ratmen.name=Szczuroludzie
 nation.ratmen.desc=Sama ich liczebność jest wystarczającym atutem.
 nation.orcs.name=Orki
 nation.orcs.desc=Na koniec tury zdobywasz 1 dodatkową monetę zwycięstwa za każdy niepusty region, jaki podbiłeś w tej turze.
-nation.ghuls.name=Ghule
-nation.ghuls.desc=Gdy Ghule stają się rasą Wymierającą, wszystkie pozostają na mapie i nadal mogą dokonywać podbojów wedle standardowych zasad.
+nation.ghouls.name=Ghule
+nation.ghouls.desc=Gdy Ghule stają się rasą Wymierającą, wszystkie pozostają na mapie i nadal mogą dokonywać podbojów wedle standardowych zasad.
 nation.giants.name=Olbrzymy
 nation.giants.desc=Atakujesz regiony sąsiadujące z Górami, które już zajmujesz liczbą żetonów o 1 mniejszą niż wymagana. Nadal potrzebujesz co najmniej jednego żetonu.
 nation.halflings.name=Niziołki
