--- a/resources/GameBundle.properties
+++ b/resources/GameBundle.properties
@@ -75,3 +75,4 @@ nation.elves.name=Elfy
 nation.elves.desc=Zachowujesz wszystkie wycofane oddziały.
 nation.humans.name=Ludzie
 nation.humans.desc=Na koniec tury każdy kontrolowany region Pól przynosi ci dodatkowo 1 monetę zwycięstwa.
+error.token.already_placed=Skorzystałeś już w tego żetonu\!
